@@ -1,5 +1,6 @@
 = 2.0.0.63 =
 * Image import for old posts can set the wrong image url for the featured image - FIXED
+* Ability to add captions to the images slider - ADDED
 
 = 2.0.0.62 =
 * GD Archive pages not rendering shortcodes when Elementor is active - FIXED
